# BabyStyleKg

./: .gitignore  pyproject.toml
src/accounts/: models.py  serializers.py
src/accounts/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_rename_is_admin_user_is_staff_and_more.py
src/carts/: admin.py  models.py  serializers.py  views.py
src/carts/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options.py
src/common/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/common/migrations/: 0001_initial.py  0002_alter_sitesettings_options.py  0003_banner.py  0004_alter_banner_banner.py  0005_review.py
src/core/: settings.py  urls.py
src/orders/: models.py
src/orders/migrations/: 0001_initial.py  0002_alter_paymentmethod_slug_alter_statusorder_slug.py  0003_alter_order_options_alter_orderitem_options_and_more.py
src/products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/products/migrations/: 0001_initial.py  0002_agegroup_title_alter_agegroup_slug_alter_brand_slug_and_more.py  0003_category_icon.py  0004_alter_agegroup_options_alter_brand_options_and_more.py  0005_alter_product_age_group_alter_product_article_and_more.py  0006_productreview_created_at_productreview_updated_at.py  0007_favorite.py
